More scripting classes
Added basic scripting classes:
-Object
-Entity
-Component
-Transform
-Script

--- a/EngineQ/EngineQScripting/EngineQScripting.csproj
+++ b/EngineQ/EngineQScripting/EngineQScripting.csproj
@@ -40,6 +40,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Component.cs" />
+    <Compile Include="Entity.cs" />
     <Compile Include="Math\Matrix3.cs" />
     <Compile Include="Math\Matrix4.cs" />
     <Compile Include="Math\Quaternion.cs" />
@@ -55,7 +57,10 @@
     <Compile Include="Math\Vector4d.cs" />
     <Compile Include="Math\Vector4f.cs" />
     <Compile Include="Math\Vector4i.cs" />
+    <Compile Include="Object.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Script.cs" />
+    <Compile Include="Transform.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
