--- a/EngineQ/EngineQScripting/EngineQScripting.csproj
+++ b/EngineQ/EngineQScripting/EngineQScripting.csproj
@@ -62,6 +62,7 @@
     <Compile Include="Object.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Camera.cs" />
+    <Compile Include="Scene.cs" />
     <Compile Include="Script.cs" />
     <Compile Include="Transform.cs" />
   </ItemGroup>
