glfw window extracted

--- a/EngineQ/EngineQ/EngineQ.vcxproj.filters
+++ b/EngineQ/EngineQ/EngineQ.vcxproj.filters
@@ -99,6 +99,9 @@
     <ClCompile Include="Vertex.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="GLFWWindow.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Math\Matrix3.hpp">
@@ -189,6 +192,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Vertex.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="GLFWWindow.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
