--- a/EngineQ/EngineQ/EngineQ.vcxproj
+++ b/EngineQ/EngineQ/EngineQ.vcxproj
@@ -23,6 +23,7 @@
     <ClCompile Include="Component.cpp" />
     <ClCompile Include="EngineQ.cpp" />
     <ClCompile Include="Entity.cpp" />
+    <ClCompile Include="GLFWWindow.cpp" />
     <ClCompile Include="Light.cpp" />
     <ClCompile Include="Math\Matrix3.cpp" />
     <ClCompile Include="Math\Matrix4.cpp" />
@@ -51,6 +52,7 @@
     <ClInclude Include="Component.hpp" />
     <ClInclude Include="EngineQ.hpp" />
     <ClInclude Include="Entity.hpp" />
+    <ClInclude Include="GLFWWindow.hpp" />
     <ClInclude Include="Immovable.hpp" />
     <ClInclude Include="Light.hpp" />
     <ClInclude Include="Math\Matrix3.hpp" />
